2008-05-04  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/OBPythonOBF/setup.py: Minor changes to install the
	correct OBFs in the Python Windows install.

2008-05-04  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Make
	OBForceField::_constraints static.

2008-05-04  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h: Add virtual destructors to
	OBFFCalculation2-4.

2005-05-03  Marcus D. Hanwell  <marcus@cryos.org>

	* src/config.h.cmake: Fixed so that TIME_WITH_SYS_TIME is defined.

2008-05-04  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	
	* src/forcefields/forcefieldmmff94.*: Do the same for logging.

2008-05-03  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefields/forcefieldghemical.*,
	src/forcefields/forcefielduff.*,src/forcefields/forcefieldmmff94.*:
	OBFFCalculation has been replaced by OBFFCalculation2,
	OBFFCalculation3 and OBFFCalculation4. This makes the sizeof() smaller
	and improves performance.
	The OBFFCalculation::Compute(bool gradients) is now a template <bool
	gradients> Compute() function. The compiler will generate a Compute
	function with gradients and one without gradients. The E_Bond, ...
	functions are also template functions now. The old functions are still
	available as a wrapper for backwards compatibility. The template
	function is initialized in OBForceField::Energy(bool gradients) by
	calling E_Bond<true>() or E_Bond<false>().

2008-05-01  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* scripts/openbabel-python.i: Add OBBitVec.

2008-05-02  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Fixed include directory order.

2008-05-01  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* data/atomtyp.*: Added amidine/guanidine IMPVAL rule (thanks to Steve
	Constable for reporting & fixing the bug).

2008-04-29  Marcus D. Hanwell  <marcus@cryos.org>
