@@ -91,12 +91,12 @@ AH_VERBATIM([OBERROR],
 #endif
 ])
 
-AH_VERBATIM([OBFPTR], 
+AH_VERBATIM([OBFPRT],
 [/* Used to export symbols for DLL / shared library builds */
 #if defined(USING_OBDLL) // e.g. in src/main.cpp
-  #define OBFPTR OB_IMPORT
+  #define OBFPRT OB_IMPORT
 #else
-  #define OBFPTR OB_EXPORT
+  #define OBFPRT OB_EXPORT
 #endif
 ])
 
